2004-11-08  Atsushi Enomoto <atsushi@ximian.com>

	* DTDObjectModel.cs,
	  DTDReader.cs,
	  XmlReader.cs,
	  XmlTextReader.cs,
	  XmlException.cs :

	  Added support for 2.0 XmlException.SourceUri property. Improved
	  exception handling to contain BaseURI everywhere in the parser.

2004-11-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader2.cs : added. It is used to serve public API, plus
	  entity handling support.

	* DTDObjectModel.cs,
	  DTDValidatingReader.cs,
	  XmlDocumentType.cs,
	  XmlParserContext.cs,
	  XmlTextReader.cs :
	  Implemented XmlTextReader.EntityHandling and ResolveEntity(). To
	  implement them, XmlTextReader in 2.0 itself is in XmlTextReader2.cs
	  and XmlTextReader.cs contains Mono.Xml2.XmlTextReader which is the
	  same as 1.x XmlTextReader. XmlTextReader2 switches entity reader and
	  source reader, and never handles tokenization. 
	  The reason for "Mono.Xml2" is to avoid large changes in constructor.f

2004-11-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttribute.cs, XmlElement.cs : get_Name should consider name table.
	* XmlDocument.cs : use NameTable in Load() and LoadXml().
	* XmlReader.cs : In Create(), use NameTable in XmlReaderSettings.

2004-11-05  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : create rarely-used ArrayList later. This
	  significantly improves XmlDocument-based XPath performance.

2004-11-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Manually expanded some of AppendValueChar() and
	  XmlChar.IsWhitespace() which are on critical points on performance
	  (marked as FIXME, but it depends on JIT).

2004-11-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Search xml:* attributes more efficiently.

2004-11-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs : Reduced NameTable.Add() for prefixed names. First,
	  ReadName() now returns atomized LocalName and Prefix. Second, to
	  avoid extraneous split, SetProperties() now takes prefix and